--- a/Dockerfile.7.3
+++ b/Dockerfile.7.3
@@ -140,7 +140,7 @@ RUN NB_CORES=${BUILD_CORES-$(getconf _NPROCESSORS_CONF)} \
     curl-dev \
     ca-certificates \
     ${CUSTOM_BUILD_PKGS}" \
- && apk -U add \
+ && apk -U --no-cache add \
     ${BUILD_DEPS} \
     s6 \
     su-exec \
