--- a/Dockerfile.7.3
+++ b/Dockerfile.7.3
@@ -121,6 +121,7 @@ ARG CUSTOM_PKGS=" \
 
 COPY rootfs /
 
+# hadolint ignore=DL3003,DL3018
 RUN NB_CORES=${BUILD_CORES-$(getconf _NPROCESSORS_CONF)} \
  && BUILD_DEPS=" \
     linux-headers \
