--- a/Dockerfile.7.4
+++ b/Dockerfile.7.4
@@ -8,8 +8,8 @@ ARG LIBICONV_VERSION=1.16
 
 LABEL description="nginx + php image based on Alpine" \
       maintainer="hoellen <info@hoellen.eu>" \
-      php_version="PHP v$PHP_VER built from source" \
-      nginx_version="nginx v$NGINX_VER built from source"
+      php-version="PHP v$PHP_VER built from source" \
+      nginx-version="nginx v$NGINX_VER built from source"
 
 ARG PHP_MIRROR=http://ch1.php.net
 
