--- a/.github/workflows/docker.image.yml
+++ b/.github/workflows/docker.image.yml
@@ -40,6 +40,7 @@ jobs:
         env:
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FILTER_REGEX_INCLUDE: /Dockerfile$
   shiftleft:
     name: shiftleft
     runs-on: ubuntu-latest
