--- a/.github/workflows/docker.image.yml
+++ b/.github/workflows/docker.image.yml
@@ -35,6 +35,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Remove /Dockerfile symlink
+        run: rm Dockerfile
       - name: Lint Code Base
         uses: github/super-linter@v4.8.4
         env:
